fix the spacing of stuff

--- a/css/index.css
+++ b/css/index.css
@@ -264,7 +264,6 @@ div.menu li:hover{
     align-items: flex-start;
     gap: 20px;
     flex: 2;
-    /* flex-shrink: 0; */
     max-width: 560px;
   }
   .landing-bio-text{
@@ -273,6 +272,7 @@ div.menu li:hover{
     /* color:#6f7287; */
   }
  
+
   .project--highlights{
     margin: 24px 0px; 
     max-width: 1440px;
@@ -356,7 +356,8 @@ div.menu li:hover{
   .landing-icon{
     display: flex;
     flex: 1;
-    /* margin:0rem 3rem; */
+    width:100%;
+    max-height: 400px;
     justify-content: center;  
   }
   
@@ -762,7 +763,6 @@ div.menu li:hover{
     place-content: center;
     padding: 1rem;
   }
-
   .inner-container{
     padding: 10px 0rem 0rem;
   }
@@ -771,26 +771,14 @@ div.menu li:hover{
   }
   .gray{
     font-size: 14px;
-
   }
-
   .middle-container{
     margin-top: 2rem;
     gap: 0px;
-
   }
-
-  /* .center-image img{
-    max-height: 100%;
-    max-width: 100%;
-  } */
-
   .inner-container{
     width:90vw;
-      /* border-bottom: solid #6f7287 1px;
-      padding-bottom:5%; */
   }
-
   .divider{
     display:block;
     width:90%;
@@ -832,14 +820,10 @@ div.menu li:hover{
     .highlight--project--images{
       max-width: 511px;
     }
-  
-   
     .highlight--project--content{
       max-width: 500px;
     }
-    
 }
-
 
 /*  LOADING CSS START */
 .loading-screen {
@@ -848,7 +832,6 @@ div.menu li:hover{
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.7); */
   display: flex;
   flex-direction: column;
   justify-content: center;
